bug 138436 - remove redundant style change reflows on auto-layout table. sr=attinasi, r=alexsavulov